web-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-web
  labels:
    app:  my-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-webapp
  strategy:
    rollingUpdate:
      maxSurge: 25
      maxUnavailable: 25
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  my-webapp
    spec:
      containers:
      - image:  dox2410/appache2-preveil:1
        name:  my-webapp
        ports:
        - name: webapp-port
          containerPort: 80  
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /
            port: webapp-port
          initialDelaySeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: webapp-port
          initialDelaySeconds: 10
          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
  selector:
    app: my-webapp
  ports:
  - port: 80
    targetPort: webapp-port
  type: LoadBalancer
